# buffered_io

./: CMakeLists.txt  README.md  RunTests.txt  SmartBuffer.hpp  SmartIOTest.cpp  TECHNICAL_DETAILS.md
docs/: TECHNICAL_DETAILS.md
src/: AsyncSmartBuffer.hpp  CMakeLists.txt  DefaultIOTest.cpp  SmartBuffer.hpp  SmartIOTest.cpp
tests/: AsyncIOBufferingTests.cpp  CMakeLists.txt  IOBufferingUnitTests.cpp
